# planet_download

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
data/: README.md  coverage_summary.csv  multi_quad_clusters.csv  per_cluster_quadcount.csv  scan_results.json
examples/: create_composites.ipynb  examples_api.ipynb
infrastructure/: README.md  geospatial.def  run_band_stats.sbatch  run_patchify.sbatch  run_patchify_composite.sbatch
main/: download_and_process.py  download_small_aoi.py
planet_download/: __init__.py  cli.py  client.py  composites.py
reports/: planet_dhs_sa_africa_coverage.html
scripts/: check_corrupted_tifs.py  compute_band_stats.py  patchify.py  patchify_composite.py  redownload_corrupted.py
