[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "planet-download"
version = "0.1.0"
description = "A Python library for downloading Planet basemap data to AWS S3"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Ivan Higuera-Mendieta", email = "ihigueme@stanford.edu"},
]

dependencies = [
    "planet>=2.0.0",
    "boto3>=1.34.0",
    "geojson>=3.0.0",
    "shapely>=2.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0", 
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
