[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "planet-download"
version = "0.1.0"
description = "A Python library and CLI for downloading Planet basemap data to local storage"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Ivan Higuera-Mendieta", email = "ihigueme@stanford.edu"},
]

dependencies = [
    "requests>=2.28.0",
    "geopandas>=0.13.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "shapely>=2.0.0",
    "rasterio>=1.3.0",
    "rio-cogeo>=4.0.0",
    "click>=8.0.0",
    "tqdm>=4.60.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
planet-download = "planet_download.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0", 
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
